--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,7 +7,7 @@
     tools:context=".view.DetailActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_user_list"
+        android:id="@+id/rv_post_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="18dp"
